<resources>
    <string name="app_name">MinesweeperGame</string>
    <string name="new_game">New Game</string>
    <string name="levels">Levels</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings icon</string>
    <string name="main_title">Main Title</string>
    <string name="cartoon_bomb">Cartoon Bomb</string>
    <string name="flag">Flag</string>
    <string name="sparks">Background Sparks</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="levels_title">Levels Title</string>
    <string name="back_button">Back Button</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="sound_lines">Sound Lines</string>
    <string name="info_button">Info Button</string>
    <string name="about_button">ABOUT</string>
    <string name="rules_button">RULES</string>
    <string name="restartIcon">🕹️</string>
    <string name="bomb">💣</string>
    <string name="flag_box">🚩</string>
    <string name="default_count">000</string>
    <string name="image_flag">Flag in Game Image</string>
    <string name="image_timer">Timer in game Image</string>
    <string name="leave_game">Leave the Game</string>
</resources>