<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/explode"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/sparks2"
        android:layout_width="409dp"
        android:layout_height="257dp"
        android:contentDescription="@string/sparks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sparks" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="87dp"
        android:layout_height="70dp"
        android:backgroundTint="#00ffffff"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/back_arrow" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#00ffffff"
        android:contentDescription="@string/settings"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013"
        app:srcCompat="@drawable/setting" />

    <ImageView
        android:id="@+id/cartoon_bomb"
        android:layout_width="134dp"
        android:layout_height="96dp"
        android:contentDescription="@string/cartoon_bomb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flag"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cartoon_bomb" />

    <ImageView
        android:id="@+id/flag"
        android:layout_width="100dp"
        android:layout_height="117dp"
        android:contentDescription="@string/flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/flag" />

    <ImageButton
        android:id="@+id/sound_off_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:backgroundTint="#00ffffff"
        android:contentDescription="@string/sound_off"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@drawable/sound_off" />

    <ImageButton
        android:id="@+id/sound_on_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:backgroundTint="#00ffffff"
        android:contentDescription="@string/sound_on"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@drawable/sound_on" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="202dp"
        android:contentDescription="@string/sound_lines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/sound_lines" />

</androidx.constraintlayout.widget.ConstraintLayout>