<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/levels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/explode"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/sparks2"
        android:layout_width="409dp"
        android:layout_height="257dp"
        android:contentDescription="@string/sparks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sparks" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="87dp"
        android:layout_height="70dp"
        android:backgroundTint="#00ffffff"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/back_arrow"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/level_2"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:background="@drawable/button_border_yellow"
        android:text="@string/level_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <Button
        android:id="@+id/level_1"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:background="@drawable/button_border_green"
        android:text="@string/level_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#2FF337"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <Button
        android:id="@+id/level_3"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:background="@drawable/button_border_red"
        android:text="@string/level_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#E81000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <ImageView
        android:id="@+id/cartoon_bomb"
        android:layout_width="134dp"
        android:layout_height="96dp"
        android:contentDescription="@string/cartoon_bomb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flag"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cartoon_bomb" />

    <ImageView
        android:id="@+id/flag"
        android:layout_width="100dp"
        android:layout_height="117dp"
        android:contentDescription="@string/flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/flag" />

    <ImageView
        android:id="@+id/levels_title"
        android:layout_width="293dp"
        android:layout_height="121dp"
        android:contentDescription="@string/levels_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:srcCompat="@drawable/levels_title" />

</androidx.constraintlayout.widget.ConstraintLayout>